<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_items">

    <fragment
        android:id="@+id/nav_items"
        android:name="io.github.kn65op.domag.ui.items.ItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items">

        <action
            android:id="@+id/action_nav_items_self"
            app:destination="@id/nav_items">
            <argument
                android:name="depotId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>

        <action
            android:id="@+id/action_nav_items_to_editContainer"
            app:destination="@id/editContainer">
            <argument
                android:name="depotId"
                android:defaultValue="0"
                app:argType="integer" />
            <argument
                android:name="parentId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>

        <action
            android:id="@+id/action_nav_items_to_fragmentEditItem"
            app:destination="@id/fragmentEditItem">
            <argument
                android:name="itemId"
                android:defaultValue="0"
                app:argType="integer" />
            <argument
                android:name="depotId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_shortage"
        android:name="io.github.kn65op.domag.ui.shortage.GalleryFragment"
        android:label="@string/menu_shortage"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_short_term"
        android:name="io.github.kn65op.domag.ui.shortTerm.ShortTermFragment"
        android:label="@string/menu_short_term"
        tools:layout="@layout/fragment_short_term" >
        <action
            android:id="@+id/action_nav_short_term_to_fragmentEditItem"
            app:destination="@id/fragmentEditItem" >
            <argument
                android:name="itemId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_shopping_lists"
        android:name="io.github.kn65op.domag.ui.shoppingList.ToolsFragment"
        android:label="@string/menu_shopping_lists"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="io.github.kn65op.domag.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_nav_categories_self"
            app:destination="@id/nav_categories">
            <argument
                android:name="categoryId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_nav_categories_to_editCategory"
            app:destination="@id/editCategory">
            <argument
                android:name="categoryId"
                android:defaultValue="0"
                app:argType="integer" />
            <argument
                android:name="parentId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="io.github.kn65op.domag.ui.settings.SendFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/editContainer"
        android:name="io.github.kn65op.domag.ui.depot.EditDepotFragment"
        android:label="fragment_edit_container"
        tools:layout="@layout/fragment_edit_depot">
        <action
            android:id="@+id/action_editContainer_to_nav_items"
            app:destination="@id/nav_items">
            <argument
                android:name="depotId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/editCategory"
        android:name="io.github.kn65op.domag.ui.categories.EditCategoryFragment"
        android:label="fragment_edit_category"
        tools:layout="@layout/fragment_edit_category">
        <action
            android:id="@+id/action_editCategory_to_nav_categories"
            app:destination="@id/nav_categories">
            <argument
                android:name="categoryId"
                android:defaultValue="0"
                app:argType="integer" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/fragmentEditItem"
        android:name="io.github.kn65op.domag.EditItemFragment"
        android:label="fragment_edit_item"
        tools:layout="@layout/fragment_edit_item">
        <action
            android:id="@+id/action_fragmentEditItem_to_nav_items"
            app:destination="@id/nav_items" />
    </fragment>
</navigation>