<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_item_amount_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_item_amount_text"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_item_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_item_best_before_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_item_best_before_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/edit_item_best_before_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/edit_item_depot_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/edit_item_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>